<resources>
    <string name="app_name">Bankev2.0</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="EntradaLogin">Login</string>
    <string name="EntradaSenha">Senha</string>
    <string name="Logar">Logar</string>
    <string name="CadUsuario">Cadastro de Usuário</string>
    <string name="txtNomeCompleto">Nome Completo</string>
    <string name="txtCPF">CPF (Somente números)</string>
    <string name="txtEmail">Email</string>
    <string name="txtLogin">Login</string>
    <string name="txtSenha">Senha</string>
    <string name="txtConta">Conta</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="CadastroUsuarios">Registre-se Aqui</string>
    <string name="description_is_here">Description is Here</string>
</resources>
